[gd_scene load_steps=14 format=3 uid="uid://0ckqin0njvj4"]

[ext_resource type="Script" path="res://UI/ingame_ui.gd" id="1_1hsrn"]
[ext_resource type="Texture2D" uid="uid://bgr81875a4doc" path="res://Collectables/powerup_progress_bar_back.svg" id="3_52y11"]
[ext_resource type="PackedScene" uid="uid://buxy1ejbko412" path="res://UI/star_count.tscn" id="3_pcjc4"]
[ext_resource type="Texture2D" uid="uid://c85804f3jwved" path="res://Collectables/powerup_progress_bar.svg" id="4_0qlyh"]

[sub_resource type="Shader" id="Shader_64uhu"]
code = "/**
* Shadow 2D.
* License: CC0
* https://creativecommons.org/publicdomain/zero/1.0/
*/
shader_type canvas_item;
render_mode blend_mix;

uniform vec2 deform = vec2(2.0, 2.0);
uniform vec2 offset = vec2(0.0, 0.0);
uniform vec4 modulate : source_color;

//uniform vec2 texture_size; //uncomment for GLES2

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	vec2 uv = UV;
	float sizex = float(textureSize(TEXTURE,int(ps.x)).x); //comment for GLES2
	float sizey = float(textureSize(TEXTURE,int(ps.y)).y); //comment for GLES2
	//float sizex = texture_size.x; //uncomment for GLES2
	//float sizey = texture_size.y; //uncomment for GLES2
	uv.y+=offset.y*ps.y;
	uv.x+=offset.x*ps.x;
	float decalx=((uv.y-ps.x*sizex)*deform.x);
	float decaly=((uv.y-ps.y*sizey)*deform.y);
	uv.x += decalx;
	uv.y += decaly;
	vec4 shadow = vec4(modulate.rgb, texture(TEXTURE, uv).a * modulate.a);
	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sa2l3"]
shader = SubResource("Shader_64uhu")
shader_parameter/deform = Vector2(0, 0)
shader_parameter/offset = Vector2(-50, -40)
shader_parameter/modulate = Color(0, 0, 0, 0.392157)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xg0g"]
region = Rect2(0, 0, 198, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5kil"]
animations = [{
"frames": [{
"duration": 1.4,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xg0g")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axw4p"]
bg_color = Color(1, 1, 1, 0.364706)
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_324iy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3kap"]

[sub_resource type="InputEventAction" id="InputEventAction_3olf4"]
action = &"TogglePowerup"

[sub_resource type="Shortcut" id="Shortcut_tncji"]
events = [SubResource("InputEventAction_3olf4")]

[node name="ingame_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1hsrn")
metadata/_edit_use_anchors_ = true

[node name="WarningSign" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_sa2l3")
position = Vector2(48, 37)
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_l5kil")
autoplay = "default"
frame_progress = 0.989522

[node name="WholeScreen" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ScoreBox" type="HBoxContainer" parent="WholeScreen"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="Panel" type="Panel" parent="WholeScreen/ScoreBox"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_axw4p")

[node name="VBoxContainer" type="VBoxContainer" parent="WholeScreen/ScoreBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Control" type="Control" parent="WholeScreen/ScoreBox/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StarCount" parent="WholeScreen/ScoreBox/Panel/VBoxContainer" instance=ExtResource("3_pcjc4")]
layout_mode = 2

[node name="Score" type="Label" parent="WholeScreen/ScoreBox/Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_324iy")
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 64
text = "Score"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="WholeScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="WholeScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="WholeScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
theme_override_styles/separator = SubResource("StyleBoxEmpty_j3kap")

[node name="PowerupButton" type="Button" parent="WholeScreen/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
tooltip_text = "SPACE"
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
toggle_mode = true
shortcut = SubResource("Shortcut_tncji")
flat = true
icon_alignment = 1
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="WholeScreen/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="WholeScreen/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
rounded = true
fill_mode = 3
texture_under = ExtResource("3_52y11")
texture_progress = ExtResource("4_0qlyh")

[node name="VSeparator2" type="VSeparator" parent="WholeScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_j3kap")

[node name="VSeparator3" type="VSeparator" parent="WholeScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/separator = SubResource("StyleBoxEmpty_j3kap")

[node name="Control" type="Control" parent="WholeScreen"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
